# feanor-math

./: .gitignore  CLAUDE.md  Cargo.toml  Readme.md  out  out2  rust-toolchain.toml  rustfmt.toml  test.asm
.github/workflows/: ci.yml
src/: boo.rs  computation.rs  compute_locally.rs  cow.rs  delegate.rs  divisibility.rs  euclidean.rs  extcmpmap.rs  field.rs  function.rs  generic_cast.rs  group.rs  homomorphism.rs  integer.rs  iters.rs  lazy.rs  lib.rs  local.rs  matrix.rs  named_closure.rs  ordered.rs  parallel.rs  perfect.rs  pid.rs  prelude.rs  primitive.rs  primitive_int.rs  ring.rs  serialization.rs  specialization.rs  tests.old.rs  tracing.rs  unsafe_any.rs  vector.rs  wrapper.rs
src/algorithms/: bigint.rs  bigint_ops.rs  bluestein.rs  buchberger.new.rs  buchberger.rs  cantor_zassenhaus.rs  conv_mul.rs  cooley_tuckey.rs  cyclotomic.rs  discrete_log.rs  ec_factor.rs  eea.rs  elim_dvr.rs  erathostenes.rs  eratosthenes.rs  euclid.rs  extension_invert.rs  extension_ops.rs  f4.rs  fft.rs  fincke_pohst.rs  finke_pohst.rs  galois.rs  gauss.rs  hensel.rs  int_bisect.rs  int_factor.rs  interpolate.rs  karatsuba.rs  lll.old.rs  lll.rs  matmul.rs  miller_rabin.rs  mod.rs  multiply.rs  multipointeval.rs  newton.rs  poly_det.rs  poly_div.rs  poly_factor.rs  (+14 more)
src/algorithms/convolution/: extlen.rs  fft.rs  fftconv.rs  karatsuba.rs  mod.rs  ntt.rs  rns.rs
src/algorithms/eea/: mod.rs  poly.old.rs  poly.rs
src/algorithms/fft/: bluestein.rs  complex_fft.rs  cooley_tuckey.rs  dyn_fft.rs  factor_fft.rs  mod.rs  primitive.rs  radix3.rs
src/algorithms/linsolve/: extension.rs  gauss.rs  mod.rs  poly_det.rs  smith.rs
src/algorithms/lll/: exact.rs  float.rs  mod.rs
src/algorithms/matmul/: mod.rs  strassen.rs
src/algorithms/poly_factor/: cantor_zassenhaus.rs  extension.rs  factor_locally.rs  finite.rs  finite_field.rs  integer.rs  mod.rs  number_field.rs  rational.rs
src/algorithms/poly_factor_local/: factor.rs  gcd.rs  hensel.rs  mod.rs  squarefree_part.rs
src/algorithms/poly_gcd/: factor.rs  finite.rs  gcd.rs  gcd_lift.rs  gcd_locally.rs  global.rs  hensel.rs  integer.rs  local.rs  mod.rs  number_field.rs  power_decomposition_lift.rs  squarefree_part.rs
src/algorithms/poly_local/: gcd.rs  hensel.rs  heuristic_factor.rs  mod.rs  squarefree_part.rs
src/algorithms/poly_squarefree/: finite_field.rs  integer.rs  mod.rs
src/algorithms/sparse_invert/: builder.rs  matrix.rs  mod.rs  row_echelon.old.rs  row_echelon.rs
src/group_impls/: finite.rs  mod.rs
src/matrix/: dense.rs  mod.rs  owned.rs  submatrix.rs  subslice.rs  transform.rs  transpose.rs
src/mempool/: caching.rs  mod.rs
src/reduce_lift/: lift_poly_eval.rs  lift_poly_factors.rs  mod.rs  poly_eval.rs  poly_factor_gcd.rs  primelist.rs
src/ring_impls/: as_field.rs  direct_power.rs  field.rs  finite.rs  float_complex.rs  local.rs  mod.rs  primitive_int.rs  rational.rs  rust_bigint.rs
src/ring_impls/approx_real/: float.rs  mod.rs
src/ring_impls/extension/: complex_embedding.rs  extension_impl.rs  galois_field.rs  mod.rs  number_field.rs
src/ring_impls/fraction/: fraction_impl.rs  mod.rs
src/ring_impls/mpir/: mod.rs
src/ring_impls/multivariate/: mod.rs  multivariate_impl.rs
src/ring_impls/poly/: dense_poly.rs  mod.rs  sparse_poly.rs
src/ring_impls/zn/: mod.rs  zn_64b.rs  zn_64m.rs  zn_big.rs  zn_rns.rs  zn_static.rs
src/ring_properties/: divisibility.rs  field.rs  finite.rs  integer.rs  lift_poly_eval.rs  mod.rs  ordered.rs  pid.rs  serialization.rs  specialization.rs
src/ring_properties/reduce_lift/: lift_poly_eval.rs  lift_poly_factors.rs  primelist.rs
src/rings/: bigint.rs  direct_power.rs  field.rs  fieldextension.rs  finite.rs  finite_field.rs  float_complex.rs  float_real.rs  local.rs  mod.rs  padic.rs  poly.rs  rational.rs  rust_bigint.rs  zn.rs  zn_small.rs  zn_static.rs
src/rings/approx_real/: float.rs  mod.rs
src/rings/crypto/: mod.rs
src/rings/extension/: conway.rs  extension_impl.rs  galois_field.rs  galois_field_new.rs  impl_new.rs  impl_short.rs  mod.rs  number_field.rs
src/rings/fraction/: fraction_impl.rs  mod.rs
src/rings/matrix/: mod.rs
src/rings/mpir/: mod.rs  mpir_bindings.rs
src/rings/multivariate/: mod.rs  multivariate_impl.rs  ordered.rs  vec_based.rs
src/rings/multivariate_new/: mod.rs  multivariate_impl.rs
src/rings/multivariate_new/multivariate_impl/: logic.rs  mod.rs
src/rings/poly/: dense_poly.rs  mod.rs  sparse_poly.rs  vec_poly.rs
src/rings/zn/: fast_fft.rs  fftconv.rs  fp.rs  mod.rs  simd_rns.rs  zn_42.rs  zn_63bit.rs  zn_64.rs  zn_64b.rs  zn_64m.rs  zn_barett.rs  zn_big.rs  zn_dyn.rs  zn_pow2.rs  zn_rns.rs  zn_static.rs
src/seq/: conversion.rs  map.rs  mod.rs  permute.rs  sparse.rs  step_by.rs  subvector.rs
src/vector/: chain.rs  map.rs  mod.rs  permute.rs  sparse.rs  stride.rs  subvector.rs  vec_fn.rs
src/vectors/: mod.rs
