[package]
name = "feanor-math"
version = "2.0.0"
edition = "2021"
authors = ["Simon Pohmann <simon@pohmann.de>"]

repository = "https://github.com/FeanorTheElf/feanor-math"
homepage = "https://github.com/FeanorTheElf/feanor-math"
keywords = ["math", "mathematics", "primes", "number-theory"]
readme = "Readme.md"
description = "A library for number theory, providing implementations for the arithmetic in various rings and algorithms working on them."
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["rlib"]
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.3"
libc = "0.2"
stability = "0.2.0"
rayon = { version = "1.8.0", optional = true }
ndarray = { version = "0.15.6", optional = true }

[features]
generic_tests = []
unstable-enable = []
mpir = []
parallel = ["dep:rayon"]
ndarray = ["dep:ndarray"]

[profile.profiling]
inherits = "bench"
debug = true
panic = "abort"
codegen-unit = 1

[package.metadata.docs.rs]
all-features = true